2010-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/quantize.c (ReduceImageColors): Progress message should
	include the image file name.

2010-03-24  Glenn Randers-Pehrson  <glennrp@simple...>
	* Revised coders/jpeg.c to preserve the Exif profile.

2010-03-24  Glenn Randers-Pehrson  <glennrp@simple...>
	* coders/png.c (ReadOnePNGImage): Eliminated some of the deprecated
	direct access to ping_info->members.
        Eliminated support of very old libpng versions (1.0.11 and earlier).

2010-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c (GetPostscriptDelegateInfo): Add support for
	invoking "gs-cmyk" and "gs-cmyka" entries in delegates.mgk when
	ColorSeparationType or ColorSeparationMatteType is requested.
	Requisite entries in delegates.mgk are left for the user to add.

2010-03-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick): Don't initialize locale
	settings in InitializeMagick().  Resolves SourceForge bug #2967282
	"setlocale called by GraphicsMagick".

2010-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/{command.c, display.c}: Make sure that 'animate',
	'display', and 'identify' report any error only once, and then
	proceed to the next file name rather than quitting.  Problem was
	reported by Patrick Welche.

2010-03-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Makefile.am: Update PerlMagick/Magick.pm in the
	source tree (as required) since it is distributed source and
	contains the current version number.

2010-03-03  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c: restored missing "US" in PNG_USER_CHUNK_CACHE_MAX
        at line 102.  Added some (unsigned long) typecasts on print statements
        to stifle warnings.

2010-03-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.2.43.  Resolves CVE-2010-0205 as
	pertains to GraphicsMagick Windows build.
