@@ -133,7 +133,7 @@ fi
 # This shouldn't be there yet.
 rm -f PerlMagick/Makefile.PL
 
-%configure --enable-libtool-verbose --with-included-ltdl \
+%configure --with-included-ltdl \
         --enable-shared --disable-static \
 	--with-modules --with-frozenpaths \
 %if %{perlm}
@@ -149,12 +149,16 @@ rm -f PerlMagick/Makefile.PL
 %endif
 	--with-quantum-depth=%{quant}
 make
+%if %{perlm}
+make all-perl
+%endif
 
 %install
 rm -rf $RPM_BUILD_ROOT
 make DESTDIR=$RPM_BUILD_ROOT install
 
 %if %{perlm}
+make DESTDIR=$RPM_BUILD_ROOT install-exec-perl
 # Remove unpackaged files.
 rm -f `find $RPM_BUILD_ROOT%{_libdir}/perl*/ -name perllocal.pod -type f`
 rm -f `find $RPM_BUILD_ROOT%{_libdir}/perl*/ -name .packlist -type f`
@@ -235,6 +239,10 @@ rm -rf $RPM_BUILD_ROOT
 %endif
 
 %changelog
+* Tue Apr 13 2010 Bob Friesenhahn <bfriesen@graphicsmagick.org> 1.3.13
+- Fixed PerlMagick build and install which was broken by Makefile
+  changes.
+
 * Wed Jan 23 2009 Bob Friesenhahn <bfriesen@graphicsmagick.org> 1.3
 - The module .la files need to be installed as part of the base
   install or else the modules will fail to load.
