@@ -180,6 +180,7 @@ doc_DATA = \
 if MAINTAINER_MODE
 MAINTAINER_TARGETS = \
 	magick-version \
+	GraphicsMagick.spec \
 	$(PERLMAGICK_MAINTAINER_TARGETS) \
 	$(WWW_MAINTAINER_TARGETS) \
 	$(WWWAPI_MAINTAINER_TARGETS) \
