@@ -24,6 +24,10 @@
 2010-04-13  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> GraphicsMagick.spec.in: Fix RPM build.  PerlMagick was not being
+        built due to Makefile changes.  Resolves SourceForge issue
+        #2952696 "RPM build broken: (Perl) file not found by glob".
+
   <LI> magick/quantize.c (ReduceImageColors): Progress message should
         include the image file name.
 
